# ChangeLog for gnome-extra/gnome-tweak-tool
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-tweak-tool/ChangeLog,v 1.27 2013/12/24 17:00:45 pacho Exp $

*gnome-tweak-tool-3.10.1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org>
  +files/gnome-tweak-tool-3.10.1-gentoo-cursor-themes.patch,
  +gnome-tweak-tool-3.10.1.ebuild, -gnome-tweak-tool-3.8.1.ebuild:
  Version bump for Gnome 3.10

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> gnome-tweak-tool-3.8.1-r1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> gnome-tweak-tool-3.8.1-r1.ebuild:
  amd64 stable, bug #478252

*gnome-tweak-tool-3.8.1-r1 (17 Nov 2013)

  17 Nov 2013; Pacho Ramos <pacho@gentoo.org>
  +files/gnome-tweak-tool-3.8.1-wm-preferences.patch,
  +gnome-tweak-tool-3.8.1-r1.ebuild:
  Prevent problems setting WM preferences, upstream bug #706834

  26 Oct 2013; Pacho Ramos <pacho@gentoo.org>
  -files/gnome-tweak-tool-3.0.4-gentoo-cursor-themes.patch,
  -gnome-tweak-tool-3.6.1-r1.ebuild, -gnome-tweak-tool-3.8.0.ebuild,
  gnome-tweak-tool-3.8.1.ebuild:
  Fix python dependencies, bug #489230 by Mark R. Pariente and mgorny. Drop old.

*gnome-tweak-tool-3.8.1 (17 Jul 2013)

  17 Jul 2013; Pacho Ramos <pacho@gentoo.org> +gnome-tweak-tool-3.8.1.ebuild,
  -gnome-tweak-tool-3.7.4.ebuild:
  Version bump, drop old

  01 Jul 2013; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-tweak-tool-3.8.0.ebuild:
  Add missing REQUIRED_USE.

*gnome-tweak-tool-3.8.0 (18 Apr 2013)

  18 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gnome-tweak-tool-3.8.0.ebuild:
  Version bump

  30 Mar 2013; Pacho Ramos <pacho@gentoo.org>
  +files/gnome-tweak-tool-3.7.4-gentoo-cursor-themes.patch,
  gnome-tweak-tool-3.7.4.ebuild:
  Use correct patch (#463774 by Harris Landgarten), also drop custom
  run_in_build_dir as it's now in eclasses.

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>