@@ -6,14 +6,14 @@ AUX gnome-tweak-tool-3.7.4-gentoo-cursor-themes.patch 1005 SHA256 1291e7bf318e01
 AUX gnome-tweak-tool-3.8.1-wm-preferences.patch 530 SHA256 45772fb874fe64e22512e0ea990bfc75b3f54597b3f2bc8367e49e4ddadcf4de SHA512 220dc027eecc94f2139397896d7d1cd49d52b49172fe6ae9a0c9caa2ad14a7a3cb53dafcf70cc2a9681342efcffb8ed1315bdedcd08d42c1f2df20a45c65f7e2 WHIRLPOOL e3be4411b462d2a1abae68cb33be3f7906ea2d83bb8f27dc3e9f65a3941e009fdb2fe835a4a0d6a352433a05b0461b266bae51e44a650dac92f9e669f9a16e6b
 DIST gnome-tweak-tool-3.10.1.tar.xz 240564 SHA256 fb5af9022c0521a925ef9f295e4080212b1b45427cd5f5f3a901667590afa7ec SHA512 b673de27a9c69efbcbdea8c4b24d2fc8235e79aa2c6a692f6ac3c394523bb4133bad9ca4309feee5caf54529fa623c4141c70dbdf8df4a79bf6795e1dc717db9 WHIRLPOOL 1158de98387fe28d3f9ec5fa38fcc8108b17ad847f27c7e486ecd43305a09eac29efeebd04f6c0ef2c4e10326b0b6d6e79837bcf4f0ae7843ef5d534cdd791db
 DIST gnome-tweak-tool-3.8.1.tar.xz 230128 SHA256 283e3174ce85aeb9187de31a09b59866e84debd31dcdddedc1615a5097ea54c1 SHA512 d70e69dbdb0c05353a56cbdc9f495a7c27afe2f7af6533326cd3c28e9b729e25d0c77a4bb10cf091fd1920048a678b210b5e9d0f424a51189b1e58d75d210ee3 WHIRLPOOL fd0233b09f8996956f808a518d5d071a5fb3263053903132c3bc0bfeefbcbce7c0c77b1eac484c205080787805d61103bcde50db85b6ca221e85ad7e0f406641
-EBUILD gnome-tweak-tool-3.10.1.ebuild 1862 SHA256 1dd05847a9ec2d05d9568600bd2a8e06b0b1266c2007f97903b09d2d8693b037 SHA512 7ed2eed3878d597e57593fa952830c4e12f4d9f4d9ebb4336135d868b2bb9010f456ce89a197097d2e93c735c64f3485e1c2bcdfa213f3f2fec36afd0c0e0859 WHIRLPOOL a813ce7ebb032f63c2a4767ba17bef4e0f53ad2c0bac7f2b0e3cdd313186208472f5621556e1bbfbc3680807380eeb23c086a1a37753622b6b45bfb7bb4a5070
+EBUILD gnome-tweak-tool-3.10.1.ebuild 1926 SHA256 9f593323ae64c53b0442648b07105458119fbc0b3f342b8e7ddcfd51ee9975d1 SHA512 5258cf3055eb75764696547ac81ab6e41eb4546ef352adb7257465d3696d2bc5ddd0c2f251b0bdd2775f6f2e197d1e2c7fd64a98754c79b4419bafc529540f25 WHIRLPOOL 06f9c4cfdf4ec6f0df050281de8f72ef7051c58d9c269bf683ef18f4524f0903c2f77239a8cb66fe344b0e394edf78598f22e12554381724859a3f07c2643b0c
 EBUILD gnome-tweak-tool-3.8.1-r1.ebuild 1864 SHA256 99e09a46439ba51ef9710c683e03f17d7b229b892a1f4796cdd9b877bf8000a2 SHA512 5453848992736b26ef3a9307c1d26b0fecc4bbb85da6bde38f07a92c8f0f8e7c2609c2398415783cf81c16a4130afd6324f1fc4e4d4181bc4ae19935c8c87c56 WHIRLPOOL 97decd7b08a6007290f43663e7f7949dfac648dad26eb57e2cf0c777e6d5078bc2ab14ce6f4c090647b1ed411f28f8b96d53eaff744d02769780631612c02015
-MISC ChangeLog 5778 SHA256 a4c3f27f2ffd2baa63b9c09f7da5f429a7510d81d050783113ea36550d9d9964 SHA512 229fd19b9cb09b60684b007bc3e3b4b90066283d36a86bbb96fb7051edcd872dccb79f06f78866b74ae949720268fe7261693e8a80ce4dfce91dc536cfd88d61 WHIRLPOOL 3fad30a1bbf53ae9cc2335d081ddeb86ba915c8881c49e15e891b822ec4f49f7de0e162b7212b05e7a625997ee9733058df8b2ed0844e72ca00b3671d54efef6
+MISC ChangeLog 5904 SHA256 721ead86cc898eabd74d057e0c639e546d4fe02b4e7332f929bc947d1ea515c6 SHA512 9bc4006c2d03a16e4c84d947b9a0188116cf17caee3ea45f73a4e2fe18103ef9d28ba934cf0494cf056823a31c5badd8bcab789285bd96952165a2b5af1f888d WHIRLPOOL 7becff2382809ebcbe849bcee54b07a154c8fdf3915e60114af171cc9048b1a87b0682dbdf35606a629d8d5c39e588261190707136a492d2ee4af83b223955ca
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK5vb8ACgkQCaWpQKGI+9R5ZwCfQ+GkKDLw8vhll9EsyhAooC5U
-miMAn20AqXK5nx2ziLYmbyD+LrAMXPQd
-=oFtE
+iEYEAREIAAYFAlL3UC4ACgkQCaWpQKGI+9QubwCff2+M3TPX5n5XZPJEaKJPoqHv
+1g4An0jfQDtMKe7lDJbyys2zA0eEKD7/
+=xrJJ
 -----END PGP SIGNATURE-----
