@@ -1,16 +1,16 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-tweak-tool/gnome-tweak-tool-3.10.1.ebuild,v 1.1 2013/12/24 17:00:45 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-tweak-tool/gnome-tweak-tool-3.10.1.ebuild,v 1.2 2014/02/09 09:53:49 pacho Exp $
 
 EAPI="5"
 GCONF_DEBUG="no"
 GNOME2_LA_PUNT="yes"
-PYTHON_COMPAT=( python2_{6,7} )
+PYTHON_COMPAT=( python2_7 )
 
 inherit eutils gnome2 python-r1
 
 DESCRIPTION="Tool to customize GNOME 3 options"
-HOMEPAGE="https://wiki.gnome.org/GnomeTweakTool"
+HOMEPAGE="https://wiki.gnome.org/action/show/Apps/GnomeTweakTool"
 
 LICENSE="GPL-2+"
 SLOT="0"
@@ -19,10 +19,11 @@ REQUIRED_USE="${PYTHON_REQUIRED_USE}"
 
 KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 
+# Newer pygobject needed due upstream bug #723951
 COMMON_DEPEND="
 	${PYTHON_DEPS}
 	>=gnome-base/gsettings-desktop-schemas-3.4
-	>=dev-python/pygobject-3.2.1:3[${PYTHON_USEDEP}]
+	>=dev-python/pygobject-3.10.2:3[${PYTHON_USEDEP}]
 "
 # g-s-d, gnome-desktop, gnome-shell etc. needed at runtime for the gsettings schemas
 RDEPEND="${COMMON_DEPEND}
