@@ -4,15 +4,15 @@ Hash: SHA256
 AUX seahorse-nautilus-3.8.0-glib-warning.patch 1084 SHA256 1a0e24e7340ffe168f48e3feb22910823fcde913d7da636221ce636d56f9aa52 SHA512 1ed643c70fbdf6b9ef36165a778a223f5e6c2a3f63578ffacd60e68762a80f20c0e182c4ca93b241517a56ea63280ff1585f13b049b095544c3caa84a424756c WHIRLPOOL c4a5860dbffe6f365d9591649c5ac7e586d8aa46cb47395134b20f589f1e5c0d9646812c8a099b15221bcfa3b5a2c64f3c7da446b77a8cf9e3636f3cf2a466c5
 DIST seahorse-nautilus-3.10.1.tar.xz 392700 SHA256 eacaf33bba920cf117641393a6eef483dbc075009349082e77d22f79afbd823a SHA512 85cf66bf71ae410989cee3741ab68e8e1afc2891288fd79b16cfac4a0b06485ef6a13fd7ea66869e61a792e7823cd08e273741fe60979fded89ce9d6398ec11b WHIRLPOOL 779f3f49bd089e800e211b96f891f529de82a1b58ce0bf37ef1673fbbc4efbf4502c841e522758b90b4e5ab763af49980e0f5c1b4a28f14d193b607a4cfe6f78
 DIST seahorse-nautilus-3.8.0.tar.xz 388672 SHA256 8173ef08a700ff254fb5637a7f2138ba7625b19ed2102a82fd69f1ecb8072863 SHA512 2bc4206c4e6414a2b000b77391d2b8255393ebe9cc5fb9556e927b4863c64934ccb21982326a07082215152114153dcff597530727540b86dfb21a034488efa9 WHIRLPOOL f298f9d6565fb4bbf31e44698c1e9b656a7ab374f90329744619160258b49860941407d10921d372b8235858fc31162e4b4b763f77b114fd239f3cd80e92c591
-EBUILD seahorse-nautilus-3.10.1.ebuild 1294 SHA256 fad6730c1411d511b681c782fca7d6726fa838324bf19143ac4082a0a92d355c SHA512 19a18271daf53cb1c3f8be94f2e2c8de730e75197009030d927d7e1897a5167ad9291027446b944df1b807563d0a2d5f7aab99ed685d667bd04ddf6ee818cd16 WHIRLPOOL b3e2658ad40d7ef59a542b0609e8cfea652ae071fec9b5bbb072c2d74c3467759a8134aefcde3b868f0a4ccf7bf46536d9473727960c640f69fa01521a14104c
+EBUILD seahorse-nautilus-3.10.1.ebuild 1459 SHA256 e3b1e88d31420e328bd8372a6e0dbd1ad10cfff92de0c249fc931b06c9e3c990 SHA512 524960a2892d0b7b5ab4051dcecbd15cfd3ee59e978e98c7c00aeac4b9eb41a60b6b483be65b2156907d3a612ad8b4edcb434975e0927698c088d2caa24eec17 WHIRLPOOL 6665a9f79f4c33c294e9c2b87cc5b301468fe35f1e673575abbfe2ef647a557bf068f24ca778d4ff8d82c67705cebeb871982dd245dd011365ad51f119ac76ef
 EBUILD seahorse-nautilus-3.8.0-r1.ebuild 1394 SHA256 c6da04768a09d512492fd374cda374b4fcafcd724a218549fba6853399929c00 SHA512 2823569bde1f21d90efa36ab32fb0915d61e0946373710ba4d8e6a8104ca325bd53c99eaa9e96c181c15d2078fc4b67063e9761fab23deee2ed4bcc1f7fbd576 WHIRLPOOL a1fec9af51e8ec59fbd25509af0fce50517618ebf7622f63323da0d015f464b54ef07becef04c8671ff5333b825ee3ff0c0b027adf539d3cc2cfe2bfa9aa516a
 EBUILD seahorse-nautilus-3.8.0.ebuild 1281 SHA256 90b01e3ba83cdc8e981c52f0153071b007d09cd5113be74cf9a660b6ed403acf SHA512 d2c71d3711f43bb53305b690a8b52c5978ad964e2429529d0f416b08a51a991aee2e5aa2836abe3cd3c548c738f469671d89184282d5b9e27bcc9b505c291834 WHIRLPOOL 742c7fb5354456df9d84cf4cff37a107e9f32cf2238382337a3ed40d84dd21ac38e4017c29edde3116b4ae381b20c751f8d262623e273d8d51c22885b31d9645
-MISC ChangeLog 1685 SHA256 f1411197ee45bf4f542656e82624ac1c1b8fa02ead4f727c6a4b18a66f6ba5a9 SHA512 c809ad7b9760a64e1a4f6e0221a09fcb4745ebee054216579eb6257f82e675f6709744577e98cb23f7e94c22b1609207566acb36730b368ba7f171d42d735488 WHIRLPOOL df0097661123c0311d89d6bf023018920f908656dfafd7f4e81cbff6fc1a65b1db01229b16c8dee3d76672910c9da8351e96f4d94daff7a5263fff71762fecc8
+MISC ChangeLog 1809 SHA256 fb2c6b243663d2daa263b37acf22c2d185cb5405564607089f38a35ca20cf07e SHA512 731aaaaee5f4ad7ecc160a33685248ecb364e241ab0c3c3eef4bb63a3dbf9a304f5fa0f3cb9292ea57e6abf6cf07cbec751b0b6d6eb5d6c6cfba9c75e79fa481 WHIRLPOOL ae5bf61c7c8df07455516f71219cf4904e7496a1cb77b9859cb7047674fd557236c69af391139bd5d0a9fab6080bbc23dd079a00ceffb9ef0464d9bf1ed2869c
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLQXf4ACgkQCaWpQKGI+9Sv3gCcDbjRGTMM5eamhCfwdUQwtBsm
-14YAn2Mv+dE0DLh0wrRTQDWKWVME5Bwz
-=SbPH
+iEYEAREIAAYFAlL3S/oACgkQCaWpQKGI+9T6kQCeOgchVqEWPpRAiUzEsKB8RzZh
+I1YAnjwctpuo0s7KL3MiY2FP23wnogu3
+=WSU8
 -----END PGP SIGNATURE-----
