@@ -13,13 +13,13 @@ EBUILD shotwell-0.13.1-r2.ebuild 2358 SHA256 6d498d092c76e70f75c361d224e6aea51e9
 EBUILD shotwell-0.14.0-r1.ebuild 2374 SHA256 469806b1b5b1af7a1f8546b52d5d0374ca8391907b9cee6694240c96d6cf97f2 SHA512 baa81ef7c09f22dc45ba11cd0392b0d1905c5ede62e87ba6165507e199539095b1f36987f43ea4964c525a105cce9611b6755fd3f43af0d9dd07063888655fbc WHIRLPOOL 1d108f836b57759300362b77372be500ea053cffd9f90239dbbf5e61db0fb0280b66f48fcdf27a1c1941c6caaf0874fd1748e02188507bcde966c7719f9b9e96
 EBUILD shotwell-0.14.1.ebuild 2409 SHA256 95d7f989f1992046698dfb82ac0fc8c3e26e28dc8cab6f608017aa92a14d0563 SHA512 7aa3d86fa95882a7ec6644a13577cb5d61ac0b999f6fed3da23ab1f7d1dcae7f957f0da0b43e3f1d607acb09e35275e3600b9207ea314eb6bf76100119fd9ba7 WHIRLPOOL 66a5c80f0704878a99f5786ba772148a28e869390c54eb8e202c6a562331352267029f8a0a8156bcbc8be91ad4ceac7304aecbe299a37de9663ad8a66b5a7ab3
 EBUILD shotwell-0.15.0.ebuild 2805 SHA256 3a7b0e240bf63944b691e32c5c3bf718e591aae1ac1b9ff40c620e0ec431a407 SHA512 726b83ec57534a6cbf574c29e9c667d47965ad9737383b08ced828ba278aa0a9b70fbc1b8715a9330cb5ba747ed6f0c3686495ef2027bb76859f4897d4dcfa13 WHIRLPOOL b10a807d467dc99617c6447f22e6ef22a39a893e35098f25db063ec1b7e9cbae0be47bc6159b0d253f53ddb12a7dc65aa0c1c60c313d1ddfb44e32151870e797
-EBUILD shotwell-0.15.1.ebuild 2805 SHA256 95d52c26d1ad0da427cb150de9ea988347e6ebfdecaef412452690a45b49ddd1 SHA512 9f9c52daffaa21836a6aa58626805c3283e91366059c9abb9139da9e2b0568dcf30b3c027bd400f909be28141017278674437b46add6641bf27b15421f832388 WHIRLPOOL 34c94c8c9a498bc76b2133d23a32aa2a96012ca2795f112bf318703a7a2d11ebc7e05a6dc88d5ccf23825b7b638143dd1d84e3d29999bd0337eea41bcc2b04af
-MISC ChangeLog 10260 SHA256 4db219a0ee67be34d3401758f1e678c13bf8ff8b8c2e72c3aab32ab2eb172df9 SHA512 ac4d2ebbf070e4d52343f5aaab1cb049b8b7adb86db737d7f1d9c5f23a9c55c43b300b45cf9f2a3c82a25d0295157cfa7e0d092784c6a87724f88e0b6a34498d WHIRLPOOL 65ae3ebac8d49d3e7ba568b018f33ea154a64bdc02a4d5320d1e1dc9180b22f723bfa2c2f70efed45e647e311f0ce6fc600868879a94753feb080581c9abd24c
+EBUILD shotwell-0.15.1.ebuild 2805 SHA256 0c794524318f0ba3357630ef46053fb3f331de22418ddb6c8bb1843929e2a81e SHA512 0454ee01cd5e838942ad4692422297e2af930226c35c5937c9c10bec0e8e9e1e20fc8d3bb8cd1bf95a0d2828f325330c1eb6291b7d73c73937bc1859fbd54bcb WHIRLPOOL 9016bcf790494f5ef3d795af02f9cf6f5c995bb02ea3036007a5a5485b03b1d4cf2c74d260f772bb68f4bf08079c815908af8e4c279f2c298f56c48073acb4b2
+MISC ChangeLog 10359 SHA256 aad1583a1e590a6aac9cd2f34d2b6a580731e31bd2ba185cf08cdde40bf4a095 SHA512 7ee784d9686b2725ca375a3047fd287716a41eb2b821ded2ad662d9eb57fc183cfeb7d1f35755bb2b69cc1fc15003af2ec174ab26b463c991f8a3a93f3285463 WHIRLPOOL 9b98e1832560b3e74feb66ca24372f728080178bb98646eff7fe04a56e0aea1012c33875599062e1f9e19a2017f74a7eec7887dd5797b295a236ae2be0873e5a
 MISC metadata.xml 665 SHA256 d7ed9e0a0af566d5e6891e77c0b69c49df16b5d291f0126243892a3ec36aaedf SHA512 4bc0078d47452551bc043e9fb6d1774db44b9b2cf67ee581e9cdeeffb86b198c13753c7595638e1feedc9c876457d1d5393d064d6535f1b2283bcec43c861300 WHIRLPOOL e3bd5f1dc118225520d15e289e901c686478707b39e4aff702ae0d33ad7005f158874686d7d49ce2e5f18faeb920e612a109c0c9e6f4bd737a24b58578e7c088
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKk0CYACgkQCaWpQKGI+9TPsACeM5LWouuMriIWGfvCer9ne2Gd
-CqMAn0mH35XoKHFPQcFuwfda8e+cdHst
-=Kv0R
+iEYEAREIAAYFAlL3UUoACgkQCaWpQKGI+9Sq8QCfX/nnXniLU6tpmPPNjOBV7ZwS
+nx4AmgLpcWgvos1olGe/FOLnXbQoCvEb
+=rj4Y
 -----END PGP SIGNATURE-----
