@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare test unpack
-DEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] >=gnome-base/gsettings-desktop-schemas-3.4 >=dev-python/pygobject-3.2.1:3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] >=dev-util/intltool-0.40.0 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4 userland_GNU? ( >=sys-apps/coreutils-8.5 )
+DEPEND=python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=gnome-base/gsettings-desktop-schemas-3.4 >=dev-python/pygobject-3.10.2:3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-util/intltool-0.40.0 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4 userland_GNU? ( >=sys-apps/coreutils-8.5 )
 DESCRIPTION=Tool to customize GNOME 3 options
 EAPI=5
-HOMEPAGE=https://wiki.gnome.org/GnomeTweakTool
-IUSE=python_targets_python2_6 python_targets_python2_7
+HOMEPAGE=https://wiki.gnome.org/action/show/Apps/GnomeTweakTool
+IUSE=python_targets_python2_7
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2+
-RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] >=gnome-base/gsettings-desktop-schemas-3.4 >=dev-python/pygobject-3.2.1:3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] >=gnome-base/gnome-desktop-3.6.0.1:3=[introspection] >=x11-libs/gtk+-3.9.10:3[introspection] net-libs/libsoup[introspection] x11-libs/libnotify[introspection] >=gnome-base/gnome-settings-daemon-3 gnome-base/gnome-shell >=gnome-base/nautilus-3 x11-wm/metacity
-REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 )
+RDEPEND=python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=gnome-base/gsettings-desktop-schemas-3.4 >=dev-python/pygobject-3.10.2:3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=gnome-base/gnome-desktop-3.6.0.1:3=[introspection] >=x11-libs/gtk+-3.9.10:3[introspection] net-libs/libsoup[introspection] x11-libs/libnotify[introspection] >=gnome-base/gnome-settings-daemon-3 gnome-base/gnome-shell >=gnome-base/nautilus-3 x11-wm/metacity
+REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=mirror://gnome/sources/gnome-tweak-tool/3.10/gnome-tweak-tool-3.10.1.tar.xz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	774182647ff84c6a2365bbcd9635044c	gnome2-utils	d7c71c6a7d871f567b416a363d65c3dc	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	3bb814ab7959a36067101a6bef683b6f	python-utils-r1	ceb3e4c3ba203e28bb02eeb182d88acf	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=58f48f71872c66930c2fa01dfac6585b
+_md5_=bb235f441186ec8f4852d684862fbc29
