@@ -2,11 +2,11 @@ DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
 DEPEND=>=app-crypt/gpgme-1.0.0 >=app-crypt/gcr-3.4 >=dev-libs/dbus-glib-0.35 >=dev-libs/glib-2.28:2 gnome-base/gnome-keyring >=gnome-base/nautilus-3 x11-libs/gtk+:3 >=x11-libs/libcryptui-3.9.90 >=x11-libs/libnotify-0.3:= || ( =app-crypt/gnupg-1.4* =app-crypt/gnupg-2.0* ) >=dev-util/intltool-0.35 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
 DESCRIPTION=Nautilus extension for encrypting and decrypting files with GnuPG
 EAPI=5
-HOMEPAGE=http://www.gnome.org/projects/seahorse/
+HOMEPAGE=https://wiki.gnome.org/action/show/Apps/Seahorse
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=>=app-crypt/gpgme-1.0.0 >=app-crypt/gcr-3.4 >=dev-libs/dbus-glib-0.35 >=dev-libs/glib-2.28:2 gnome-base/gnome-keyring >=gnome-base/nautilus-3 x11-libs/gtk+:3 >=x11-libs/libcryptui-3.9.90 >=x11-libs/libnotify-0.3:= || ( =app-crypt/gnupg-1.4* =app-crypt/gnupg-2.0* ) !app-crypt/seahorse-plugins[nautilus]
 SLOT=0
 SRC_URI=mirror://gnome/sources/seahorse-nautilus/3.10/seahorse-nautilus-3.10.1.tar.xz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	774182647ff84c6a2365bbcd9635044c	gnome2-utils	d7c71c6a7d871f567b416a363d65c3dc	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=ec98146100fec80cfcbd967cbeedf0b5
+_md5_=32924724852a447075091e12422b9565
