@@ -4,10 +4,10 @@ DESCRIPTION=Open source photo manager for GNOME
 EAPI=5
 HOMEPAGE=http://yorba.org/shotwell/
 IUSE=linguas_ia linguas_hi linguas_te linguas_fr linguas_de linguas_it linguas_es linguas_pl linguas_et linguas_sv linguas_sk linguas_lv linguas_pt linguas_bg linguas_bn linguas_nl linguas_da linguas_zh_CN linguas_el linguas_ru linguas_pa linguas_hu linguas_en_GB linguas_uk linguas_ja linguas_fi linguas_zh_TW linguas_cs linguas_nb linguas_id linguas_th linguas_sl linguas_hr linguas_ar linguas_ast linguas_ro linguas_sr linguas_lt linguas_gl linguas_tr linguas_ca linguas_ko linguas_kk linguas_pt_BR linguas_eu linguas_he linguas_mk linguas_ta linguas_vi linguas_or linguas_km linguas_af linguas_as linguas_gu linguas_kn linguas_ml linguas_mr linguas_af_ZA linguas_bn_IN linguas_id_ID linguas_ky linguas_nn_NO linguas_ta_IN linguas_te_IN linguas_fr linguas_de linguas_it linguas_es linguas_pl linguas_et linguas_sv linguas_sk linguas_lv linguas_pt linguas_bg linguas_bn linguas_nl linguas_da linguas_zh_CN linguas_el linguas_ru linguas_pa linguas_hu linguas_en_GB linguas_uk linguas_ja linguas_fi linguas_zh_TW linguas_cs linguas_nb linguas_id linguas_th linguas_sl linguas_hr linguas_ar linguas_ast linguas_ro linguas_sr linguas_lt linguas_gl linguas_tr linguas_ca linguas_ko linguas_kk linguas_pt_BR linguas_eu linguas_he linguas_mk linguas_te linguas_ta linguas_eo linguas_or linguas_hi linguas_as linguas_kn linguas_ml linguas_mr linguas_bn_IN linguas_gu linguas_id_ID linguas_nn_NO linguas_vi
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=LGPL-2.1
 RDEPEND=>=dev-db/sqlite-3.5.9:3 >=dev-libs/dbus-glib-0.80 >=dev-libs/glib-2.30.0:2 >=dev-libs/json-glib-0.7.6 >=dev-libs/libgee-0.8.5:0.8 >=dev-libs/libxml2-2.6.32:2 >=dev-util/desktop-file-utils-0.13 gnome-base/dconf >=media-libs/gexiv2-0.4.90 media-libs/gst-plugins-base:1.0 media-libs/gst-plugins-good:1.0 media-libs/gstreamer:1.0 media-libs/lcms:2 >=media-libs/libexif-0.6.16:= >=media-libs/libgphoto2-2.4.2:= >=media-libs/libraw-0.13.2:= >=net-libs/libsoup-2.26.0:2.4 >=net-libs/rest-0.7:0.7 >=net-libs/webkit-gtk-1.4:3 >=virtual/udev-145[gudev] >=x11-libs/gtk+-3.6.0:3
 SLOT=0
 SRC_URI=http://www.yorba.org/download/shotwell/stable/shotwell-0.15.1.tar.xz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	774182647ff84c6a2365bbcd9635044c	gnome2-utils	d7c71c6a7d871f567b416a363d65c3dc	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	vala	b365480bc54c4e356dc1e953da9fe356	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=66c3cb9d5473eb6239e59f3f79cd69ff
+_md5_=d6c8b8b2cb87a67927e4ca58fc077bb1
